--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 #contenedorGeneral{
     display: flex;
     flex-wrap: wrap;
@@ -5,4 +10,39 @@
 }
 .card{
     width: 20rem;
+}
+.contenedorCarrusel{
+    position: relative;
+    max-width: 600px;
+    margin: 10px auto;
+}
+.carrusel{
+    display: flex;
+    overflow: hidden;
+}
+
+.slide{
+    flex: 0 0 100%;
+    transition: transform 0.5s ease-in-out;
+}
+.slide img{
+    width: 100%;
+}
+.btnsCarrusel{
+    position: absolute;
+    top: 35%;
+    transform: translate(-50%);
+    border: none;
+    font-size: 25px;
+    background-color: rgba(253, 249, 249, 0);
+    opacity: 0.5;
+}
+.btnsCarrusel:hover{
+    opacity: 1;
+}
+#btnAnterior{
+ left: 30px;
+}
+#btnSiguiente{
+  right: 10px;
 }
