--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ header{
 }
 
 body{
-     background-image: url(img/Fondo.webp);
+     background-image: url(img/Fondo.jpg);
     background-repeat:no-repeat;
     background-size: cover;
     background-attachment: fixed; 
